--- a/index.html
+++ b/index.html
@@ -400,18 +400,11 @@
         </h2>
     </div> -->
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
-<h2>hello world<h2>
+<br>
+<br>
+<h1 style="color:red; font-size:48px; text-align:center">Fahmida Akter<h1>
+<h2 style="color:navy; font-size:28px; text-align:center">Thanks for visit my site<h2>
 
 <br>
 <br>
@@ -428,21 +421,7 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 <br>
 <br>
 </script>
